--- a/app/views/admin/bantuan/form-update.html
+++ b/app/views/admin/bantuan/form-update.html
@@ -434,7 +434,7 @@
 
 <!-- Toast -->
 <div aria-live="polite" aria-atomic="true" style="bottom: 1em; right: 1em;"
-    class="position-fixed d-flex justify-content-end flex-column align-items-end">
+    class="position-fixed d-flex justify-content-end flex-column align-items-end toast-container">
     <div class="toast w-100 fade hide bg-white" role="alert" aria-live="assertive" aria-atomic="true"
         data-toast="card_img">
         <div class="toast-header d-flex gap-x-2 justify-content-center align-items-center">
