--- a/app/views/donatur.html
+++ b/app/views/donatur.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
@@ -182,7 +183,7 @@
     <script src="/vendors/jquery.scrollbar/jquery.scrollbar.min.js"></script>
     <script src="/vendors/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
     <!-- Core Script -->
-    <script src="/assets/route/auth/js/auth.js"></script>
+    <script src="/assets/route/auth/js/auth.js?v=160723"></script>
     <script src="/assets/main/js/main.js?v=080822"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
