--- a/app/views/admin/bantuan/berjalan.html
+++ b/app/views/admin/bantuan/berjalan.html
@@ -35,7 +35,7 @@
                                 </div>
                             </th>
                             <td>
-                                <?= $data_bantuan->nama; ?>
+                                <?= $data_bantuan->nama_bantuan; ?>
                             </td>
                             <td>
                                 <b><?= (is_null($data_bantuan->jumlah_target) ? 'Unlimited' : number_format($data_bantuan->jumlah_target,0,',','.')); ?></b>
@@ -44,7 +44,7 @@
                                 <div class="progress-wrapper" style="padding-top: 0px;">
                                     <div class="progress-info">
                                         <div class="progress-label">
-                                            <span><?= number_format($data_bantuan->jumlah_pelaksanaan,0,',','.') ?></span>
+                                            <span><?= number_format($data_bantuan->total_pelaksanaan,0,',','.') ?></span>
                                         </div>
                                         <div class="progress-percentage">
                                             <span><?= $data_bantuan->persentase_pelaksanaan; ?>%</span>
@@ -99,7 +99,7 @@
             <div class="card-footer py-4">
                 <nav aria-label="...">
                     <ul class="pagination justify-content-end mb-0">
-                        <?= Ui::pageing($this->data['halaman'], $this->data['record'], 10); ?>
+                        <?= Ui::pageing($this->data['halaman'], $this->data['record'], $this->data['limit']); ?>
                     </ul>
                 </nav>
             </div>
