--- a/app/views/auth.html
+++ b/app/views/auth.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
@@ -141,7 +142,7 @@
 <!-- Argon JS -->
 <script src="/assets/main/js/argon.min.js"></script>
 <!-- Core Script -->
-<script src="/assets/route/auth/js/auth.js"></script>
+<script src="/assets/route/auth/js/auth.js?v=160723"></script>
 <script src="/assets/route/auth/js/script.js"></script>
 <?= $this->getScript('controller'); ?>
 <?= $this->getScript('action'); ?>
