--- a/app/views/default.html
+++ b/app/views/default.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
+    <meta property="og:title" content="Pojok Berbagi Indonesia">
+    <meta property="og:url" content="https://pojokberbagi.id">
+    <meta property="og:description" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
+    <meta property="og:image" content="/assets/images/brand/pojok-berbagi-transparent.png">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="id_ID">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:locale:alternate" content="ar_QA">
+    <meta name="twiter:card" content="Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan.">
+    <meta name="twiter:site" content="@pojok_berbagi">
+    <meta name="twiter:creator" content="@pojok_berbagi">
+    <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
@@ -18,8 +31,8 @@
     <link rel="stylesheet" href="/assets/route/default/core/css/animate.css">
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/tiny-slider.css"> -->
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/glightbox.min.css"> -->
-    <link rel="stylesheet" href="/assets/route/default/core/css/main.css">
-    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=1">
+    <link rel="stylesheet" href="/assets/route/default/core/css/main.css?v=040523">
+    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=040523">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
 </head>
@@ -59,8 +72,8 @@
                                 <ul id="nav" class="navbar-nav ms-auto">
                                     <li class="nav-item d-md-none d-767-none">
                                         <div class="button d-flex justify-content-between my-2 flex-row-reverse">
-                                            <a href="/auth/signup" class="signup fw-bold">Daftar</a>
-                                            <a href="/auth/signin" class="signin fw-bold m-0">Masuk</a>
+                                            <?= (!$this->data['signin'] ? '<a href="/auth/signup" class="signup fw-bold">Daftar</a>' : '<a href="/auth/signout" class="signout fw-bold">Keluar</a>'); ?>
+                                            <a href="/auth/signin" class="<?= (!$this->data['signin'] ? 'signin' : 'enter') ?> fw-bold m-0"><?= (!$this->data['signin'] ? 'Masuk' : 'Akun') ?></a>
                                         </div>
                                     </li>
                                     <li class="d-md-none d-767-none">
@@ -99,8 +112,8 @@
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button">
-                                <a href="/auth/signin" class="signin fw-bold">Masuk</a>
-                                <a href="/auth/signup" class="signup">Daftar</a>
+                                <a href="/auth/signin" class="<?= (!$this->data['signin'] ? 'signin' : 'enter') ?> fw-bold"><?= (!$this->data['signin'] ? 'Masuk' : 'Akun') ?></a>
+                                <?= (!$this->data['signin'] ? '<a href="/auth/signup" class="signup">Daftar</a>' : '<a href="/auth/signout" class="signout fw-bold">Keluar</a>'); ?>
                             </div>
                         </nav>
                         <!-- End Navbar -->
@@ -217,7 +230,7 @@
     <script src="/assets/route/default/core/js/main.js"></script>
     <!-- Core Script -->
     <script src="/assets/route/default/core/js/default.js?v=290522"></script>
-    <script src="/assets/route/auth/js/auth.js"></script>
+    <script src="/assets/route/auth/js/auth.js?v=160723"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
     </body>
