--- a/app/views/default/bantuan/kategori.html
+++ b/app/views/default/bantuan/kategori.html
@@ -76,7 +76,7 @@
                         <div class="service-icon shadow d-flex justify-content-center align-items-center position-absolute bottom left"
                             data-animation-name="slide" data-animation-start="backward" <?=(isset($list_bantuan->warna)
                             ? 'style="background-color:' . $list_bantuan->warna .'"' : '') ?>>
-                            <?= Utility::iconSektor($list_bantuan->layanan); ?>
+                            <?= Utility::iconSektor($list_bantuan->id_sektor); ?>
                         </div>
                     </div>
                     <h6 class="my-3 overflow-hidden title">
@@ -97,8 +97,8 @@
                     </div>
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100"
-                            aria-valuenow="<?= $list_bantuan->persentase_donasi_dilaksanakan; ?>" <?='style="width: ' .
-                            $list_bantuan->persentase_donasi_dilaksanakan .'%"'; ?>></div>
+                            aria-valuenow="<?= $list_bantuan->persentase_donasi_disalurkan; ?>" <?='style="width: ' .
+                            $list_bantuan->persentase_donasi_disalurkan .'%"'; ?>></div>
                     </div>
                     <a href="<?= '/bantuan/detil/'. $list_bantuan->id_bantuan; ?>" class="mt-3"
                         <?=(isset($list_bantuan->warna) ? 'style="color:' . $list_bantuan->warna .'"' : '') ?>>Lihat
