--- a/app/views/donasi.html
+++ b/app/views/donasi.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="facebook-domain-verification" content="xmnklhqeygng0kcohwlzaka45pu0km" />
     <title>
         <?= $this->getTitle() . Config::get('defaults/default_title') ?>
     </title>
@@ -41,7 +42,7 @@
     <!-- Vendor Script -->
     <script src="/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Core Script -->
-    <script src="/assets/route/auth/js/auth.js"></script>
+    <script src="/assets/route/auth/js/auth.js?v=160723"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
     </body>
