--- a/public/assets/pojok-berbagi-style.css
+++ b/public/assets/pojok-berbagi-style.css
@@ -110,27 +110,27 @@ h6 {
 }
 
 .text-green {
-    color: var(--green);
+    color: var(--green) !important;
 }
 
 .text-green-box {
-    color: var(--green-box);
+    color: var(--green-box) !important;
 }
 
 .text-orange {
-    color: var(--orange);
+    color: var(--orange) !important;
 }
 
 .border-orange {
-    border-color: var(--orange);
+    border-color: var(--orange) !important;
 }
 
 .border-green {
-    border-color: var(--green);
+    border-color: var(--green) !important;
 }
 
 .border-green-box {
-    border-color: var(--green-box);
+    border-color: var(--green-box) !important;
 }
 
 .border-solid {
@@ -143,6 +143,11 @@ h6 {
 
 .broken-image {
     padding: 1em;
+}
+
+[aria-live="polite"].position-fixed {
+    bottom: 1em;
+    right: 1em;
 }
 
 /* Handling style for broken img */
@@ -161,6 +166,7 @@ img::before {
     width: 100%;
     height: 100%;
     background-color: hsl(0, 0%, 93.3%);
+    border-radius: inherit;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -197,13 +203,17 @@ img::after {
 .form-floating.input_textarea2>.form-control:not(:placeholder-shown)~label::before {
     content: '';
     position: absolute;
-    bottom: 1rem;
+    top: .5rem;
     left: 0;
     width: 100%;
     height: calc(100% - 1.5rem + .5px);
     background-color: white;
     z-index: -1;
     box-shadow: 0 5px 8px 0 #fff;
+}
+
+.form-floating.input_textarea2.touch>.form-control:not(:placeholder-shown)~label::before {
+    width: calc(100% - 0.5rem);
 }
 
 .form-floating.input_textarea2.touch>.form-control:focus~label,
@@ -216,28 +226,37 @@ textarea {
     max-height: 200px;
 }
 
-.form-floating.input_textarea2:not(.touch) textarea {
+:not(.form-floating.input_textarea2) textarea,
+.form-floating:not(.touch) textarea {
     cursor: auto;
 }
 
-.form-floating.input_textarea2:not(.touch) textarea::-webkit-scrollbar {
-    width: 1rem;
+*:not(textarea):not(body):not(html)::-webkit-scrollbar,
+:not(.form-floating.input_textarea2.touch) textarea::-webkit-scrollbar,
+.form-floating:not(.touch) textarea::-webkit-scrollbar {
+    width: 1rem !important;
 }
 
-.form-floating.input_textarea2:not(.touch) textarea::-webkit-scrollbar-track {
-    background-color: transparent;
-    border-radius: 0 inherit 0 0;
+*:not(textarea):not(body):not(html)::-webkit-scrollbar-track,
+:not(.form-floating.input_textarea2.touch) textarea::-webkit-scrollbar-track,
+.form-floating:not(.touch) textarea::-webkit-scrollbar-track {
+    background-color: transparent !important;
+    border-radius: 0 inherit 0 0 !important;
 }
 
-.form-floating.input_textarea2:not(.touch) textarea::-webkit-scrollbar-thumb {
-    border-radius: 100px;
-    border: 6px solid transparent;
-    background-clip: content-box;
-    background-color: #6c757d70;
+*:not(textarea):not(body):not(html)::-webkit-scrollbar-thumb,
+:not(.form-floating.input_textarea2.touch) textarea::-webkit-scrollbar-thumb,
+.form-floating:not(.touch) textarea::-webkit-scrollbar-thumb {
+    border-radius: 100px !important;
+    border: 6px solid transparent !important;
+    background-clip: content-box !important;
+    background-color: #6c757d70 !important;
 }
 
-.form-floating.input_textarea2:not(.touch) textarea::-webkit-scrollbar-thumb:hover {
-    background-color: #6c757dab;
+*:not(textarea):not(body):not(html)::-webkit-scrollbar-thumb:hover,
+:not(.form-floating.input_textarea2.touch) textarea::-webkit-scrollbar-thumb:hover,
+.form-floating:not(.touch) textarea::-webkit-scrollbar-thumb:hover {
+    background-color: #6c757dab !important;
 }
 
 /* Akhir Form */
@@ -247,29 +266,39 @@ textarea {
     line-height: 1;
 }
 
-/* Footer */
-.kontak a.medsos-icon i {
-    font-size: 50px !important;
+
+/* Medsos icon */
+.kontak a.medsos-icon i,
+.share a.medsos-icon i {
     transition: color 0.3s ease-in-out;
 }
 
-.kontak a.medsos-icon i[class*="instagram"] {
+.kontak a.medsos-icon i[class*="instagram"],
+.share a.medsos-icon i[class*="instagram"] {
     background: #fdf497;
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    background-clip: text;
     -webkit-background-clip: text;
+    background-clip: text;
 }
 
+.share a.medsos-icon:hover i[class*="instagram"],
 .kontak a.medsos-icon:hover i[class*="instagram"] {
     color: transparent !important;
 }
 
+.share a.medsos-icon:hover i[class*="twitter"],
 .kontak a.medsos-icon:hover i[class*="twitter"] {
     color: var(--bs-info) !important;
 }
 
+.share a.medsos-icon:hover i[class*="whatsapp"],
 .kontak a.medsos-icon:hover i[class*="whatsapp"] {
     color: #4FCE5D !important;
+}
+
+/* Footer */
+.kontak a.medsos-icon i {
+    font-size: 50px !important;
 }
 
 /* Akhir Footer */
