--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -10,6 +10,7 @@ table.table tfoot th {
     letter-spacing: 1px;
     text-transform: uppercase;
     border-top: 1px solid #e9ecef !important;
+    border-bottom: 1px solid #e9ecef !important;
     padding-right: 1.5rem;
     padding-left: 1.5rem;
 }
@@ -20,11 +21,11 @@ table tbody>tr>th {
 }
 
 table tbody>tr.highlight {
-    --highlight: rgba(50,50,93,0.11);
+    --highlight: rgba(50, 50, 93, 0.11);
     animation: pulse 1s linear 3;
 }
 
-table td .progress-info > div > span {
+table td .progress-info>div>span {
     font-size: 0.65rem !important;
 }
 
@@ -35,10 +36,99 @@ table td.auto {
 }
 
 /* table th.fit, td.fit */
-.table td.fit, 
-.table th.fit {
+table td.fit,
+table th.fit {
     white-space: nowrap;
     width: 1%;
+}
+
+table.table thead,
+table.table thead tr,
+table.table thead tr>th:first-child,
+table.table thead tr>td:first-child {
+    border-top-left-radius: inherit;
+}
+
+table.table thead,
+table.table thead tr,
+table.table thead tr>th:last-child,
+table.table thead tr>td:last-child {
+    border-top-right-radius: inherit;
+}
+
+
+/* Table absolute first with responsive scroll */
+table.table-responsive.table-absolute-first th:first-of-type {
+    z-index: 1;
+}
+
+table.table-responsive.table-absolute-first tr:not([data-zero="true"])>th:first-of-type,
+table.table-responsive.table-absolute-first tr:not([data-zero="true"])>td:first-of-type {
+    position: absolute;
+    width: auto;
+    box-shadow: 1px 0px 2px 0px var(--lighter);
+}
+
+table.table-responsive.table-absolute-first thead tr>th:first-of-type,
+table.table-responsive.table-absolute-first thead tr>td:first-of-type {
+    border-top: 2px solid #e9ecef;
+    top: 0px;
+    border-bottom: 0px;
+}
+
+table.table-responsive.table-absolute-first tbody tr>td:first-of-type,
+table.table-responsive.table-absolute-first tbody tr>th:first-of-type {
+    background-color: white;
+    border-top: 0px;
+}
+
+table.table-responsive.table-absolute-first th:not(.fit):not(.auto),
+table.table-responsive.table-absolute-first td:not(.fit):not(.auto) {
+    width: 1%;
+}
+
+table.table-responsive.table-absolute-first th:not(.fit):not(.auto):nth-child(2),
+table.table-responsive.table-absolute-first td:not(.fit):not(.auto):nth-child(2) {
+    width: 100%;
+}
+
+/* load animation table */
+table.load *:not(span) {
+    border-radius: inherit;
+}
+
+table.load a[role="button"],
+table.load *:not(span) span {
+    color: transparent;
+    background: linear-gradient(-90deg, #eee, #ddd, #ddd, #eee);
+    background-size: 400% 400%;
+    animation: gradient-load 1s ease infinite;
+    border-radius: 5px;
+}
+
+table.load i[class*="bg"] {
+    background: transparent !important;
+}
+
+table.load a {
+    cursor: none !important;
+    pointer-events: none !important;
+}
+
+table.load a i {
+    color: transparent !important;
+}
+
+@keyframes gradient-load {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 /* badge */
@@ -112,6 +202,14 @@ a.disabled {
     column-gap: 1.5em;
 }
 
+.gap-x-5 {
+    column-gap: 2em;
+}
+
+.gap-y-2 {
+    row-gap: .5em;
+}
+
 .gap-y-3 {
     row-gap: 1em;
 }
@@ -124,24 +222,36 @@ a.disabled {
     row-gap: 2em;
 }
 
+.mt--3 {
+    margin-top: -1em;
+}
+
 .form-control:focus {
     box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
 }
 
 /* Texarea */
+.form-label-group.focused .input-group,
 .form-group.focused .input-group {
     box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
 }
 
+.form-label-group.error .input-group,
 .form-group.error .input-group {
     box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
 }
 
+.form-label-group.input-group.is-invalid,
+.form-label-group.is-invalid.focused .input-group,
 .form-group.is-invalid.focused .input-group {
     box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
 }
 
 /* Toast */
+div[aria-live="polite"] {
+    z-index: 1050;
+}
+
 .d-flex>.toast {
     flex-basis: auto;
 }
@@ -157,16 +267,19 @@ a.disabled {
     background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
-.form-control.is-invalid+span.select2-container.select2-container--open .select2-selection--single,
-.was-validated .form-control:invalid+span.select2-container.select2-container--open .select2-selection--single {
-    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%);
+.select2-container.select2-container--open .select2-selection--multiple,
+.select2-container.select2-container--open .select2-selection--single,
+.select2-container--default .select2-search--dropdown .select2-search__field {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%) !important;
 }
 
-.select2-container.select2-container--open .select2-selection--single,
-.select2-container--default .select2-search--dropdown .select2-search__field,
-.select2-container--default .select2-selection--multiple,
-.select2-container--default.select2-container--focus .select2-selection--multiple {
-    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+.is-invalid .select2-container.select2-container--open .select2-selection--multiple,
+.form-control.is-invalid+span.select2-container.select2-container--open .select2-selection--multiple,
+.was-validated .form-control:invalid+span.select2-container.select2-container--open .select2-selection--multiple,
+.is-invalid .select2-container.select2-container--open .select2-selection--single,
+.form-control.is-invalid+span.select2-container.select2-container--open .select2-selection--single,
+.was-validated .form-control:invalid+span.select2-container.select2-container--open .select2-selection--single {
+    box-shadow: 0 0 0 0.2rem rgb(220 53 69 / 25%) !important;
 }
 
 /* Pagination */
@@ -241,7 +354,8 @@ a[data-action]:hover {
     box-shadow: none !important;
 }
 
-.bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
+.bootstrap-datetimepicker-widget table td.active,
+.bootstrap-datetimepicker-widget table td.active:hover {
     background-color: transparent !important;
     text-shadow: none !important;
 }
@@ -254,11 +368,20 @@ a[data-action]:hover {
     transform: translateY(1px) !important;
 }
 
+.bootstrap-datetimepicker-widget table tr>th:first-child {
+    padding-left: 1.5rem !important;
+}
+
+.bootstrap-datetimepicker-widget table tr>th:last-child {
+    padding-right: 1.5rem !important;
+}
+
 @media (min-width: 360px) {
     .form-group label {
         font-size: .75rem;
     }
 
+    .form-label-group .is-invalid,
     .form-group .is-invalid,
     .form-control.is-invalid+span.select2 .selection>.select2-selection,
     .was-validated .form-control:invalid+span.select2 .selection>.select2-selection {
@@ -282,9 +405,17 @@ a[data-action]:hover {
     .form-group label {
         font-size: .825rem;
     }
+
+    #main-content>#row-header:first-child {
+        margin: 0px -2rem;
+        padding: 0.5em 1em;
+        width: calc(100% + 4rem - 2px);
+        overflow: hidden;
+    }
 }
 
 @media (min-width: 1200px) {
+
     /* Backdrop On Burger Click */
     #panel.main-content.backdrop::after {
         background-color: transparent;
