--- a/public/assets/route/admin/core/css/form-element.css
+++ b/public/assets/route/admin/core/css/form-element.css
@@ -19,11 +19,16 @@ textarea {
     min-height: 128px !important;
 }
 
-input[maxlength]+span.input-char-left {
+textarea[maxlength]~span.input-char-left,
+input[maxlength]~span.input-char-left {
     font-size: 0.5rem;
     position: absolute;
     right: 1.25rem;
     bottom: 1.6rem;
+}
+
+input[type="text"]:focus {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%) !important;
 }
 
 .form-group.error .form-control-label,
@@ -31,14 +36,19 @@ input[maxlength]+span.input-char-left {
     position: relative;
 }
 
+.form-label-group.error .form-control-label,
 .form-group.error .form-control-label {
     color: var(--danger);
 }
 
+.form-group.is-invalid.inputGroup.input-file label>*:first-child,
+.form-label-group.is-invalid .form-control-label,
 .form-group.is-invalid .form-control-label {
     color: #fb6340;
 }
 
+.form-label-group.error .form-control-label::after,
+.form-label-group.is-invalid .form-control-label::after,
 .form-group.is-invalid .form-control-label::after,
 .form-group.error .form-control-label::after {
     content: attr(data-label-after);
@@ -50,26 +60,59 @@ input[maxlength]+span.input-char-left {
     height: 100%;
     text-transform: capitalize;
     white-space: nowrap;
+    align-items: center;
 }
 
+.form-label-group.error textarea+.form-control-label::after,
+.form-label-group.is-invalid textarea+.form-control-label::after {
+    width: auto;
+}
+
+.form-label-group.error textarea~label.form-control-label,
+.form-label-group.is-invalid textarea~label.form-control-label,
+.form-group.is-invalid textarea~label.form-control-label,
+.form-group.error textarea~label.form-control-label {
+    display: flex;
+    column-gap: .25rem;
+}
+
+.form-label-group.error textarea~.form-control-label::after,
+.form-label-group.is-invalid textarea~.form-control-label::after,
+.form-group.is-invalid textarea~.form-control-label::after,
+.form-group.error textarea~.form-control-label::after {
+    position: relative;
+    right: auto;
+}
+
+/* input-group */
+.input-group.focused {
+    box-shadow: 0 0 0 0.2rem rgb(94 114 228 / 25%);
+    transition: all .15s ease-in-out;
+}
+
+.form-group.error.inputGroup.input-file,
 .form-group.error .input-group-append>.form-control-label,
 .form-group.error .input-group-prepend>.form-control-label,
-.form-group.error > .input-group > .input-group-append > span.input-group-text,
-.form-group.error > .input-group > .input-group-prepend > span.input-group-text {
+.form-group.error>.input-group>.input-group-append>span.input-group-text,
+.form-group.error>.input-group>.input-group-prepend>span.input-group-text {
     border-color: var(--danger);
 }
 
+.form-group.is-invalid.inputGroup.input-file,
+.form-label-group.input-group.is-invalid span.input-group-text,
 .form-group.is-invalid .input-group-append>.form-control-label,
 .form-group.is-invalid .input-group-prepend>.form-control-label,
-.form-group.is-invalid > .input-group > .input-group-append > span.input-group-text,
-.form-group.is-invalid > .input-group > .input-group-prepend > span.input-group-text {
+.form-group.is-invalid>.input-group>.input-group-append>span.input-group-text,
+.form-group.is-invalid>.input-group>.input-group-prepend>span.input-group-text {
     border-color: #fb6340;
 }
 
-.form-group.error > .input-group > .input-group-prepend > span.input-group-text,
-.form-group.error > .input-group > .input-group-append > span.input-group-text,
-.form-group.is-invalid > .input-group > .input-group-prepend > span.input-group-text,
-.form-group.is-invalid > .input-group > .input-group-append > span.input-group-text {
+.form-group.error.inputGroup.input-file,
+.form-group.is-invalid.inputGroup.input-file,
+.form-group.error>.input-group>.input-group-prepend>span.input-group-text,
+.form-group.error>.input-group>.input-group-append>span.input-group-text,
+.form-group.is-invalid>.input-group>.input-group-prepend>span.input-group-text,
+.form-group.is-invalid>.input-group>.input-group-append>span.input-group-text {
     transition: border-color 0s ease;
 }
 
@@ -161,6 +204,7 @@ span.selection {
     color: #b5c1d2;
 }
 
+.select2-container--default .select2-selection--multiple,
 .select2-container--default .select2-selection--single {
     border-color: #dee2e6 !important;
     border-radius: 0.25rem !important;
@@ -168,18 +212,38 @@ span.selection {
     outline-width: 0px;
 }
 
+.form-group.error select:not(multiple)~.select2-container label[data-label-after]::after,
+.form-group.is-invalid select:not(multiple)~.select2-container label[data-label-after]::after {
+    height: auto;
+}
+
+/* multiple ini belum di tes stylenya */
+.form-group.error select~.select2-container--default .select2-selection--multiple,
 .form-group.error select~.select2-container--default .select2-selection--single {
     border-color: var(--danger) !important;
 }
 
+.form-group.is-invalid select~.select2-container--default .select2-selection--multiple,
 .form-group.is-invalid select~.select2-container--default .select2-selection--single {
     border-color: #fb6340 !important;
 }
 
+select[disabled]~.select2-container--default .select2-selection--multiple,
+select[disabled]~.select2-container--default .select2-selection--single {
+    border-color: var(--lighter) !important;
+}
+
+.select2-container--default.select2-container--disabled .select2-selection--multiple,
+.select2-container--default.select2-container--disabled .select2-selection--single {
+    background-color: var(--lighter);
+}
+
+.select2-container--default .select2-selection--multiple:focus-visible,
 .select2-container--default .select2-selection--single:focus-visible {
     border: 1px solid #5e72e4 !important;
 }
 
+.select2-container--default .select2-selection--multiple[aria-expanded="true"],
 .select2-container--default .select2-selection--single[aria-expanded="true"] {
     border-color: #5e72e4 !important;
 }
@@ -268,7 +332,7 @@ span.selection {
 }
 
 .select2-results .select2-results__option--highlighted {
-    background-color: var(--primary);
+    background-color: var(--primary) !important;
     color: #fff !important;
 }
 
@@ -278,4 +342,125 @@ span.selection {
 
 .select2-results ul {
     background-color: var(--primary);
+}
+
+.select2-container--default.select2-container--focus .select2-selection--multiple,
+.select2-container--default .select2-selection--multiple {
+    display: flex !important;
+    flex: 1 1 auto;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 1.4rem !important;
+    padding-left: 1.4rem !important;
+}
+
+.error .select2-container .select2-selection--multiple,
+.is-invalid .select2-container .select2-selection--multiple,
+.error .select2-container .select2-selection--single,
+.is-invalid .select2-container .select2-selection--single {
+    transition-duration: 0s;
+}
+
+.select2-container:not(.select2-container--open) .select2-selection--multiple:focus,
+.select2-container:not(.select2-container--open) .select2-selection--single:focus {
+    box-shadow: none !important;
+}
+
+span+select~.select2.select2-container .select2-selection.select2-selection--multiple {
+    padding-top: 1.325em !important;
+}
+
+.select2-container .select2-selection--multiple .select2-selection__rendered {
+    padding: 0px;
+    margin: 0px !important;
+    display: flex !important;
+    align-items: center;
+    gap: .5em !important;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: var(--lighter) !important;
+    border-color: var(--lighter) !important;
+    padding-left: 25px !important;
+    margin-top: 5px !important;
+    margin-left: 0px !important;
+    display: inline-flex;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice:last-of-type {
+    margin-right: 1em;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    margin: 0px !important;
+    padding: 0px .5rem;
+    border-right-color: var(--light);
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__display {
+    padding: 0px .75rem;
+}
+
+.select2-container .select2-selection--multiple .select2-search--inline {
+    display: block;
+    width: 100%;
+}
+
+.select2-container .select2-selection--multiple .select2-search--inline textarea[placeholder] {
+    padding: 8px 0px;
+    min-height: 34px !important;
+    margin: 0px;
+    width: 100% !important;
+    font-family: "Nunito";
+}
+
+.select2-container .select2-selection--multiple .select2-search--inline textarea[placeholder]::placeholder {
+    font-family: "Nunito";
+    font-weight: bolder;
+    font-size: 0.875rem;
+    width: auto;
+    line-height: 1.5;
+    color: #495057;
+    pointer-events: none;
+    cursor: text;
+    opacity: .5;
+}
+
+span+select.custom-select~.select2-container--default .select2-selection--multiple:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    border-color: #888 transparent transparent transparent;
+    border-style: solid;
+    border-width: 5px 4px 0 4px;
+    height: 0;
+    right: 1.1em;
+    margin-left: -4px;
+    margin-top: -2px;
+    top: 25%;
+    width: 0;
+    cursor: pointer;
+}
+
+span+select.custom-select~.select2-container--open .select2-selection--multiple:before {
+    content: ' ';
+    display: block;
+    position: absolute;
+    border-color: transparent transparent #888 transparent;
+    border-width: 0 4px 5px 4px;
+    height: 0;
+    right: 1.1em;
+    margin-left: -4px;
+    margin-top: -2px;
+    top: 25%;
+    width: 0;
+    cursor: pointer;
+}
+
+.select2-results__options::-webkit-scrollbar-thumb {
+    background-color: white !important;
+}
+
+.select2-results__options::-webkit-scrollbar-thumb:hover {
+    background-color: #f4f4f4c3 !important;
 }
