--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -58,28 +58,47 @@ table.table thead tr>td:last-child {
 
 
 /* Table absolute first with responsive scroll */
-table.table-responsive.table-absolute-first th:first-of-type {
+table.table-absolute-first tr[style] th:first-child,
+table.table-absolute-first tr[style] td:first-child {
+    white-space: normal;
+    padding: 5px;
+}
+
+table.table-absolute-first tr[style] th,
+table.table-absolute-first tr[style] td {
+    padding: 5px;
+}
+
+table.table-responsive.table-absolute-first thead th:first-child,
+table.table-responsive.table-absolute-first tfoot th:first-child {
+    z-index: 2;
+}
+
+table.table-responsive.table-absolute-first tbody td:first-child {
     z-index: 1;
 }
 
-table.table-responsive.table-absolute-first tr:not([data-zero="true"])>th:first-of-type,
-table.table-responsive.table-absolute-first tr:not([data-zero="true"])>td:first-of-type {
+table.table-responsive.table-absolute-first tr:not([data-zero="true"])>th:first-child,
+table.table-responsive.table-absolute-first tr:not([data-zero="true"])>td:first-child {
     position: absolute;
     width: auto;
-    box-shadow: 1px 0px 2px 0px var(--lighter);
+    box-shadow: 2px 0px 0px 0px var(--lighter);
 }
 
-table.table-responsive.table-absolute-first thead tr>th:first-of-type,
-table.table-responsive.table-absolute-first thead tr>td:first-of-type {
-    border-top: 2px solid #e9ecef;
-    top: 0px;
-    border-bottom: 0px;
+table.table-responsive.table-absolute-first thead tr>th:first-child,
+table.table-responsive.table-absolute-first thead tr>td:first-child {
+    border-bottom: .8px solid #e9ecef;
 }
 
-table.table-responsive.table-absolute-first tbody tr>td:first-of-type,
-table.table-responsive.table-absolute-first tbody tr>th:first-of-type {
+table.table-responsive.table-absolute-first tbody tr>td:first-child,
+table.table-responsive.table-absolute-first tbody tr>th:first-child {
     background-color: white;
     border-top: 0px;
+}
+
+table.table-responsive.table-absolute-first tfoot tr>th:first-child,
+table.table-responsive.table-absolute-first tfoot tr>td:first-child {
+    border: 0px !important;
 }
 
 table.table-responsive.table-absolute-first th:not(.fit):not(.auto),
@@ -412,6 +431,11 @@ a[data-action]:hover {
         width: calc(100% + 4rem - 2px);
         overflow: hidden;
     }
+
+    table.table-absolute-first tr[style] th,
+    table.table-absolute-first tr[style] td {
+        padding: 5px 1em !important;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -419,5 +443,10 @@ a[data-action]:hover {
     /* Backdrop On Burger Click */
     #panel.main-content.backdrop::after {
         background-color: transparent;
+    }
+
+    table.table-absolute-first tr[style] th,
+    table.table-absolute-first tr[style] td {
+        padding: 1em !important;
     }
 }
