--- a/public/assets/route/default/pages/css/detil.css
+++ b/public/assets/route/default/pages/css/detil.css
@@ -37,13 +37,10 @@
     flex-direction: column;
 }
 
-#commit-bantuan-area p,
-#selengkapnya p {
+.ql-container,
+#selengkapnya p,
+#commit-bantuan-area p {
     font-size: .725rem;
-}
-
-#selengkapnya p *:not(img) {
-    padding: 0px .25em;
 }
 
 #selengkapnya img {
@@ -90,8 +87,8 @@
     font-size: 1.25em;
 }
 
-#selengkapnya p {
-    margin-bottom: 1em;
+#selengkapnya p:not(:first-child) {
+    margin-top: 1em;
 }
 
 #selengkapnya * {
@@ -197,8 +194,9 @@ h6 {
         min-height: 197.62px;
     }
 
-    #commit-bantuan-area p,
-    #selengkapnya p {
+    .ql-container,
+    #selengkapnya p,
+    #commit-bantuan-area p {
         font-size: .75rem;
     }
 }
@@ -222,8 +220,9 @@ h6 {
         font-size: 1.25rem;
     }
 
-    #commit-bantuan-area p,
-    #selengkapnya p {
+    .ql-container,
+    #selengkapnya p,
+    #commit-bantuan-area p {
         font-size: .8rem;
     }
 }
@@ -243,8 +242,9 @@ h6 {
         min-height: 239.625px;
     }
 
-    #commit-bantuan-area p,
-    #selengkapnya p {
+    .ql-container,
+    #selengkapnya p,
+    #commit-bantuan-area p {
         font-size: .9rem;
     }
 
@@ -313,8 +313,9 @@ h6 {
         min-height: calc((569px / 1913) * 936);
     }
 
-    #commit-bantuan-area p,
-    #selengkapnya p {
+    .ql-container,
+    #selengkapnya p,
+    #commit-bantuan-area p {
         font-size: 1rem;
     }
 
